--- a/src/app/page/thankyou/thankyou.component.html
+++ b/src/app/page/thankyou/thankyou.component.html
@@ -1,54 +1,65 @@
-<section class="">
+<section id="thank-you">
 
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
-
-      </div>
-      <div class = "col-lg-6 col-12 offset-md-3">
+      
+      <div class = "col-lg-12 col-12">
+        <div class = "text-center order-thank">
         <h1 class="text-center">Thank You!</h1>
-        <p class="order_text">Your order has been placed</p>
-        <h5>Order ID: {{order.orders.id}}</h5>
-        <div class = "checkout_product cart-item">
-         <table>
-             <tbody>
-                 <tr *ngFor="let cart of order.order_item">
-                     <td><img src = "{{cart.image}}"></td>
-                     <td><h4 class = "mb-0">{{cart.product_detail.title}}</h4>
-                       Qty: {{cart.stock}}
-                          <!-- <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p> -->
-                   </td>
-                   <td class = "text-center"><h4>${{cart.total}}</h4></td>
-
-                 </tr>
-
-             </tbody>
-         </table>
-
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="122.881px" height="122.88px" viewBox="0 0 122.881 122.88" enable-background="new 0 0 122.881 122.88" xml:space="preserve"><g><path d="M61.44,0c16.966,0,32.326,6.877,43.445,17.995s17.996,26.479,17.996,43.444c0,16.967-6.877,32.327-17.996,43.445 S78.406,122.88,61.44,122.88c-16.966,0-32.326-6.877-43.444-17.995S0,78.406,0,61.439c0-16.965,6.877-32.326,17.996-43.444 S44.474,0,61.44,0L61.44,0z M34.556,67.179c-1.313-1.188-1.415-3.216-0.226-4.529c1.188-1.313,3.216-1.415,4.529-0.227L52.3,74.611 l31.543-33.036c1.223-1.286,3.258-1.336,4.543-0.114c1.285,1.223,1.336,3.257,0.113,4.542L54.793,81.305l-0.004-0.004 c-1.195,1.257-3.182,1.338-4.475,0.168L34.556,67.179L34.556,67.179z M100.33,22.55C90.377,12.598,76.627,6.441,61.44,6.441 c-15.188,0-28.938,6.156-38.89,16.108c-9.953,9.953-16.108,23.702-16.108,38.89c0,15.188,6.156,28.938,16.108,38.891 c9.952,9.952,23.702,16.108,38.89,16.108c15.187,0,28.937-6.156,38.89-16.108c9.953-9.953,16.107-23.702,16.107-38.891 C116.438,46.252,110.283,32.502,100.33,22.55L100.33,22.55z"/></g></svg>
+        <h6 class="order-text">Your order has been placed</h6>
         </div>
-        <div class  = "checkout_payment">
-         <ul>
-             <hr>
+        <div class = "order_status mt-4">
+          <div class = "d-flex justify-content-between order_id_strip">
+            <h6 class = "mb-0">Order Details</h6>
+            <h5 class = "mb-0">Order ID: {{order.orders.id}}</h5>
+          </div>
+         
+          <div class = "checkout_product cart-item">
+            <table>
+                <tbody>
+                    <tr *ngFor="let cart of order.order_item">
+                        <td><div class = "checkout_product_img"><img src = "{{cart.image}}"></div></td>
+                        <td><h4 class = "mb-0">{{cart.product_detail.title}}</h4>
+                          Qty: {{cart.stock}}
+                            <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p> 
+                      </td>
+                      <td class = "text-center"><h4>${{cart.total}}</h4></td>
+   
+                    </tr>
+   
+                </tbody>
+            </table>
+   
+           </div>
+           <div class  = "checkout_payment">
+            <ul>
+                <hr>
          <li class = "d-flex justify-content-between py-2">
-             <p class = "mb-0">Subtotal</p>
-             <p class = "mb-0"><span>${{order.orders.netamout}}</span></p>
-         </li>
-         <hr>
-         <li class = "d-flex justify-content-between py-2">
-             <p class = "mb-0">Standard Shipping</p>
-             <p class = "mb-0"><span>$10</span></p>
-         </li>
-         <hr>
-         <li class = "d-flex justify-content-between py-2">
-             <h5 class = "mb-0">Total</h5>
-             <h5 class = "mb-0"><span>${{order.orders.netamout+10}}</span></h5>
-         </li>
-         <hr>
-         </ul>
+                <p class = "mb-0">Subtotal</p>
+                <p class = "mb-0"><span>${{order.orders.netamout}}</span></p>
+            </li>
+            <hr>
+            <li class = "d-flex justify-content-between py-2">
+                <p class = "mb-0">Standard Shipping</p>
+                <p class = "mb-0"><span>$10</span></p>
+            </li>
+            <hr>
+            <li class = "d-flex justify-content-between py-2">
+                <h6 class = "mb-0">Paid Total Amount</h6>
+                <h5 class = "mb-0"><span>${{order.orders.netamout+10}}</span></h5>
+            </li>
+            <hr>
+            </ul>
+           </div>
         </div>
-        <p>
-          <button type = "button" class="btn cart-btn green-btn text-center" routerLink="/">Continue Shopping</button>
-        </p>
+        <div class = "mt-4 text-center">
+          <button type = "button" class="btn cart-btn green-btn text-center" routerLink="/">
+            <svg width="16.63" height="30.7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.63 30.7">
+              <path d="M16.06 30.7C16.06 19 .56 15.4.56 15.4v-.1s15.5-3.6 15.5-15.3" fill="none" stroke="currentColor" stroke-width="1.13"></path>
+            </svg> Back to Home</button>
+          <button type = "button" class="btn cart-btn btn_secondary text-center" routerLink="/products">Continue Shopping</button>
+        </div>
      </div>
     </div>
   </div>
