--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1184,7 +1184,6 @@ hr{
 				width: 100%;
 			}
 		}
-
 		
 	}
 }
@@ -2271,21 +2270,62 @@ border-bottom: 1px solid #e8e4dd;
 		background: #718786;
 	}
 
+	.answer{
+		padding-left: 2rem;
+	}
+
 	h6{
 		font-weight: 600 !important;
 	}
 
 	p{
 		font-size: 14px;
-		line-height: 20px;
+		line-height: 21px;
 		margin-bottom: 0rem;
 	}
 }
 
 
 /***============Terms & Conditions ===========***/
-#terms-section{
+#terms_banner{
+	background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url(assets/img/product/banner1.jpg);
+    padding-top: 8rem;
+	padding-bottom: 8rem;
 
+	h2{
+		color: #fff;
+	}
+
+}
+
+#terms_section{
+	background: linear-gradient(137deg , #e7e3dc 50% , #fff 0);
+  
+
+	ul{
+		padding-left: 2rem !important;
+	}
+	h2{
+		&:after{
+			content: "";
+            position: relative;
+            display: block;
+            width: 40px;
+            height: 3px;
+            background: #627b80;
+            bottom: 0;
+            margin-top: 5px;
+		}
+	}
+    
+	h6{
+		font-weight: 600 !important;
+	}
+	p{
+		font-size: 14px;
+		line-height: 21px;
+		
+	}
 }
 
 /****=============(Responsive SCSS)============******/
