--- a/src/app/page/thankyou/thankyou.component.scss
+++ b/src/app/page/thankyou/thankyou.component.scss
@@ -1,41 +1,41 @@
 #thank-you .container{
   max-width: 700px !important;
 }
-.order-thank svg{
+#thank-you .order-thank svg{
   width: 60px;
   height: 60px;
   margin:1rem 0rem;
  
 }
 
-.order-thank svg path{
+#thank-you .order-thank svg path{
   fill:#10a64a;
 }
 
 
-.order_status{
+#thank-you .order_status{
   border:1px solid #0000001f;
  
  
 }
 
-.order_status .checkout_product{
+#thank-you .order_status .checkout_product{
   padding:1rem 2rem;
 }
 
-.order_status .checkout_payment{
+#thank-you .order_status .checkout_payment{
   padding:1rem 2rem;
 }
-.order_status h5 span{
+#thank-you .order_status h5 span{
   font-size: 28px;
 }
-.order_status .checkout_payment p span{
+#thank-you .order_status .checkout_payment p span{
   font-size: 20px;
   font-weight: 600;
 }
 
 
-.order_status .order_id_strip{
+#thank-you .order_status .order_id_strip{
   background-color: #627b803b;
   padding:0.7rem 1rem;
 
