product_detail dynamic

--- a/src/app/page/thankyou/thankyou.component.html
+++ b/src/app/page/thankyou/thankyou.component.html
@@ -14,11 +14,11 @@
              <tbody>
                  <tr *ngFor="let cart of order.order_item">
                      <td><img src = "{{cart.image}}"></td>
-                     <td><h4 class = "mb-0">{{cart.product_detail.title}}</h4>
+                     <td><h4 class = "mb-0">{{cart.title}}</h4>
                        Qty: {{cart.stock}}
                           <!-- <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p> -->
                    </td>
-                   <td class = "text-center"><h4>${{cart.total}}</h4></td>
+                   <td class = "text-center"><h4>${{cart.price*cart.stock}}</h4></td>
 
                  </tr>
 
