--- a/src/app/page/thankyou/thankyou.component.html
+++ b/src/app/page/thankyou/thankyou.component.html
@@ -20,7 +20,7 @@
                 <tbody>
                     <tr *ngFor="let cart of order.order_item">
                         <td><div class = "checkout_product_img"><img src = "{{cart.image}}"></div></td>
-                        <td><h4 class = "mb-0">{{cart.product_detail.title}}</h4>
+                        <td><h4 class = "mb-0">{{cart.title}}</h4>
                           Qty: {{cart.stock}}
                             <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
                       </td>
