--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1212,6 +1212,15 @@ hr{
 		}
 	}
 	.choose_size {
+		select{
+			color: #000 !important;
+            font-size: 16px;
+            border-color: #888888 !important;
+            border-radius: 0px;
+			background-color: transparent;
+			background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 17'%3E%3Cpath fill='none' stroke='%23000000' d='M31.393.75C19.645.75 16 16.278 16 16.278h-.107S12.248.75.5.75'/%3E%3C/svg%3E");
+            width: 200px;
+		}
 		li {
 			margin: 2px;
 			border-radius: 0px !important;
@@ -1345,11 +1354,6 @@ hr{
 		}
 	}
 }
-
-
-
- 
-
 /**************Product Swatch*********/
 #product_swatch {
 	background: linear-gradient(230deg, #fff 55% , #e8e4dd 0);
@@ -2220,10 +2224,6 @@ border-bottom: 1px solid #e8e4dd;
 	color: #fff !important;
 }
 
-
-
-
-
 /***============(Faq SCSS)==============****/
 #faq_banner{
 	background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url(assets/img/product/banner1.jpg);
@@ -2302,7 +2302,7 @@ border-bottom: 1px solid #e8e4dd;
 }
 
 #terms_section{
-	background: linear-gradient(137deg , #e7e3dc 50% , #fff 0);
+	background: linear-gradient(118deg , #e7e3dc 50% , #fff 0);
   
 
 	ul{
@@ -2330,105 +2330,147 @@ border-bottom: 1px solid #e8e4dd;
 		
 	}
 }
-
-
 /***===========Thank You Page SCSS===========**/
-#thank-you .container{
-	max-width: 700px !important;
-  }
-  #thank-you .order-thank svg{
-	width: 60px;
-	height: 60px;
-	margin:1rem 0rem;
-   
-  }
-  
-  #thank-you .order-thank svg path{
-	fill:#10a64a;
-  }
-  
-  
-  #thank-you .order_status{
-	border:1px solid #0000001f;
-   
-   
-  }
-  
-  #thank-you .order_status .checkout_product{
-	padding:1rem 2rem;
-  }
-  
-  #thank-you .order_status .checkout_payment{
-	padding:1rem 2rem;
-  }
-  #thank-you .order_status h5 span{
-	font-size: 28px;
-  }
-  #thank-you .order_status .checkout_payment p span{
-	font-size: 20px;
-	font-weight: 600;
-  }
-  
-  
-  #thank-you .order_status .order_id_strip{
-	background-color: #627b803b;
-	padding:0.7rem 1rem;
-  
-	h6{
-	  line-height: 22px !important;
+#thank-you {
+	.container {
+		max-width: 700px !important;
 	}
-  }
+	.order-thank {
+		svg {
+			width: 60px;
+			height: 60px;
+			margin: 1rem 0rem;
+			path {
+				fill: #10a64a;
+			}
+		}
+	}
+	.order_status {
+		border: 1px solid #0000001f;
+		.checkout_product {
+			padding: 1rem 2rem;
+		}
+		.checkout_payment {
+			padding: 2rem 2rem 1rem 2rem;
+			p {
+				span {
+					font-size: 20px;
+					font-weight: 600;
+				}
+			}
+		}
+		h5 {
+			span {
+				font-size: 28px;
+			}
+		}
+		.order_id_strip {
+			background-color: #627b803b;
+			padding: 0.7rem 1rem;
+			h6 {
+				line-height: 22px !important;
+			}
+		}
+	}
+	button {
+		margin: 0.5rem;
+		padding: 0.8rem;
+		svg {
+			margin-right: 10px;
+			width: 20px;
+			height: 20px;
+		}
+		&:hover {
+			svg {
+				transform: rotate(360deg);
+				transition: 0.3s;
+			}
+		}
+	}
+	.btn_secondary {
+		
+		border: 1px solid #627b80;
+		border-radius: 0px !important;
+		&:hover {
+			background:#627b80;
+			color: #fff;
+		}
+	}
+	table {
+		td {
+			&:first-child {
+				width: 85px;
+			}
+			.checkout_product_img {
+				background-color: #fff;
+				width: 70px;
+				height: 70px;
+				padding: 0.4rem;
+				margin: 0.5rem 0rem;
+				text-align: center;
+				border: 1px solid #0000001f;
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: contain;
+				}
+			}
+			p {
+				font-size: 12px;
+			}
+		}
+	}
+}
+
+/***=============(Privacy Policy SCSS)=========***/
+#privacy_banner{
+	background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url(assets/img/product/banner1.jpg);
+    padding-top: 8rem;
+	padding-bottom: 8rem;
+
+	h2{
+		color: #fff;
+	}
+
+}
+
+#privacy_section{
+	/*background: linear-gradient(137deg , #e7e3dc 50% , #fff 0);*/
   
-  #thank-you button{
-	margin:0.5rem;
-	padding:0.8rem;
-  }
-  
-  #thank-you button svg{
-	margin-right: 10px;
-	width: 20px;
-	height: 20px;
-   
-  }
-  #thank-you button:hover svg{
-	transform: rotate(360deg);
-	transition: 0.3s;
-  }
-  
-  #thank-you .btn_secondary{
-	background: linear-gradient(164deg, #627b80 50%, #fff 0%);
-	border: 1px solid #627b80;
-	border-radius: 0px !important;
-  }
-  
-  #thank-you .btn_secondary:hover{
-	background: linear-gradient(164deg, #fff 50%, #627b80 0%);
-   
-  }
-  
-  #thank-you table td:first-child{
-	width: 85px;
-	
-  }
-  #thank-you table td .checkout_product_img{
-	background-color: #fff;
-	width: 70px;
-	height: 70px;
-	padding: 0.4rem;
-	margin: 0.5rem 0rem;
-	text-align: center;
-	border: 1px solid #0000001f;
-  }
-  
-  #thank-you table td .checkout_product_img img{
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
-  }
-  
-  #thank-you table td p{
-	font-size: 12px;
-  }
+
+	ul{
+		padding-left: 2rem !important;
+		li{
+			list-style: outside;
+			padding:0.3rem 0rem;
+		}
+	}
+	h2{
+		&:after{
+			content: "";
+            position: relative;
+            display: block;
+            width: 40px;
+            height: 3px;
+            background: #627b80;
+            bottom: 0;
+            margin-top: 5px;
+		}
+	}
+    
+	h6{
+		font-weight: 600 !important;
+	}
+	p{
+		font-size: 14px;
+		line-height: 21px;
+		
+	}
+	span {
+		font-size: 14px;
+		color: #000;
+	}
+}
 
 /****=============(Responsive SCSS)============******/
 
