--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,3 +1,4 @@
+<hr class = "section_hr">
 <section id = "checkout_section">
     <div class ="container">
         <div class = "text-center">
@@ -279,3 +280,5 @@
         </div>
     </div>
 </section>
+
+<hr class = "section_hr">
