--- a/src/app/page/faq/faq.component.html
+++ b/src/app/page/faq/faq.component.html
@@ -7,6 +7,7 @@
    </div>
  </section>
  <!--------------Product List banner End------------->
+ <hr class = "section_hr">
  <section id  = "faq-section">
    <div class="container">
      <app-loader *ngIf="isLoaderVisible"></app-loader>
@@ -34,3 +35,5 @@
      </div>
    </div>
  </section>
+
+ <hr class = "section_hr">
