--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+
 <!----------Breadcrumb Starts---------->
 <section class="py-2 breadcrumb_section">
     <div class="container">
@@ -12,7 +13,7 @@
     </div>
   </section>
   <!----------Breadcrumb end---------->
-
+ 
   <!---------Cart Section--------->
 <section id = "cart-section">
    <div class = "container">
@@ -79,3 +80,4 @@
      </div>
    </div>
 </section>
+<hr class = "section_hr">
