--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -9,9 +9,9 @@
                     <ul class = "nav nav-tabs justify-content-center" id = "nav-tab" role = "tablist">
                         <li class="nav-link"><a class="nav-item active" id="nav-shipping-tab" data-bs-toggle="tab" data-bs-target="#nav-shipping"
                             role="tab" aria-controls="nav-shipping" aria-selected="true" (click)="showshipping()">Information</a></li>
-                        <span>|</span>
-                       <li class="nav-link"><a class="nav-item" id="nav-payment-tab" data-bs-toggle="tab" data-bs-target="#nav-payment"
-                        role="tab" aria-controls="nav-payment" aria-selected="false"  (click)="showpayment()">Payment</a></li>
+                        <span *ngIf="showPaymentBtn">|</span>
+                       <li class="nav-link" *ngIf="showPaymentBtn"><a class="nav-item active" id="nav-payment-tab" data-bs-toggle="tab" data-bs-target="#nav-payment"
+                        role="tab" aria-controls="nav-payment" aria-selected="false" (click)="showpayment()">Payment</a></li>
                     </ul>
 
                 </nav>
@@ -32,19 +32,19 @@
                                           <input class="form-control " type="email" placeholder="Email" id="validationCustom01" required="">
                                         </div>
                                         </form>
-          
+
                                         <div class="information_check_box">
-          
+
                                           <label class="contant">Keep me up to date on news and exclusive offers
                                              <input type="checkbox" class = "input-checkbox">
                                               <span class="checkmark"></span>
                                         </label>
-          
+
                                         </div>
                                   </div>
                               </div>
-                              
-                              
+
+
 
                             </div>
                           </div>
@@ -230,12 +230,12 @@
                 </div>
 
 
-               
+
             </div>
 
             <div class = "col-lg-6 col-12 col2">
                 <div class = "text-end">
-                    <p>Total Bag <span>(2 Items)</span></p>
+                    <p>Total Bag <span>({{cartCount}} Items)</span></p>
                 </div>
                <div class = "checkout_product cart-item">
                 <table>
@@ -243,7 +243,7 @@
                         <tr *ngFor="let cart of cart.cartitem">
                             <td><div class = "checkout_product_img"><img src = "{{cart.image}}"></div></td>
                             <td><h6 class = "mb-0">{{cart.product_detail.title}}</h6>
-                            
+
                                  <!-- <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p> -->
                           </td>
                           <td><h5 class = "checkout_product_quantity"><span> Qty: </span>{{cart.stock}}</h5></td>
