--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -27,10 +27,10 @@
 <section id = "studio-section2">
     <div class = "container">
      <div class = "row">
-       <div class = "col-lg-6 col-12 ">
+       <div class = "col-lg-6 col-12 pt-4 mt-4">
           <div class = "text-end pe-4">
               <h2>A new way to shop</h2>
-              <p>The studio aims to modernize the traditional set-up of shopping handcrafted Moroccan rugs within the city’s markets. Here, our rugs are displayed on sleek modular rack systems, and an immense selection of yarns and color swatches inspire customization.</p>
+              <p class = "pt-3">The studio aims to modernize the traditional set-up of shopping handcrafted Moroccan rugs within the city’s markets. Here, our rugs are displayed on sleek modular rack systems, and an immense selection of yarns and color swatches inspire customization.</p>
           </div>
        </div>
        <div class = "col-lg-6 col-12">
@@ -54,8 +54,8 @@
             <div class = "col-lg-3 col-md-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card1.jpg" width = "100%" alt="img" class="img-responsive">
-                    <div class="content">
-                        <h5>We’ll provide the ride</h5>
+                    <div class="content p-2">
+                        <h6>We’ll provide the ride</h6>
                         <p>Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
                     </div>
                 </div>
@@ -63,27 +63,27 @@
             <div class = "col-lg-3 col-md-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card2.jpg" width = "100%" alt="img" class="img-responsive">
-                    <div class="content">
-                        <h5>We’ll provide the ride</h5>
-                        <p>Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
+                    <div class="content p-2">
+                        <h6>See our looms in action.</h6>
+                        <p>An open air courtyard that’s centered around a 150 year old olive tree allows for a full view of the 50+ looms at work.</p>
                     </div>
                 </div>
             </div>
             <div class = "col-lg-3 col-md-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card3.jpg" width = "100%" alt="img" class="img-responsive">
-                    <div class="content">
-                        <h5>We’ll provide the ride</h5>
-                        <p>Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
+                    <div class="content p-2">
+                        <h6>Discover the craft of Morocco.</h6>
+                        <p>Enjoy an espresso at the bar while browsing pieces from local artisans and artists alongside our favorite Morocco-based brands.</p>
                     </div>
                 </div>
             </div>
             <div class = "col-lg-3 col-md-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card4.jpg" width = "100%" alt="img" class="img-responsive">
-                    <div class="content">
-                        <h5>We’ll provide the ride</h5>
-                        <p>Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
+                    <div class="content p-2">
+                        <h6>Design your perfect rug with us.</h6>
+                        <p>Feel the difference for yourself. Explore our construction types, review color samples, and pick your perfect design.</p>
                     </div>
                 </div>
             </div>
@@ -93,3 +93,188 @@
     </div>
 </section>
 <!----------------(studio-section4 End)------------------>
+<hr class = "section_hr">
+
+<!----------------(studio-section5 Start)------------------>
+<section id = "studio-section4">
+    <div class = "container">
+     <div class = "row">
+       <div class = "col-lg-6 col-12">
+           <div class = "studio-img">
+               <img src = "assets/img/visit/sec4-img.jpg" width="100%">
+           </div>
+       </div>
+       <div class = "col-lg-6 col-12 col2">
+        <div class = " ps-4">
+            <h2>Our team</h2>
+            <p class = "pt-3">The Beni weaving team is compensated with above market rates alongside benefits such as childcare and transportation to work. We are proud to support and protect this ancient craft while evolving the compensation model for weavers in Morocco.</p>
+        </div>
+     </div>
+     </div>
+    </div>
+</section>
+
+
+<!----------------(studio-section5 End)------------------>
+<hr class = "section_hr">
+<!----------------(studio-section5 Start)------------------>
+<section id = "studio-section5">
+    <div class = "container">
+     <div class = "row">
+     
+       <div class = "col-lg-6 col-12 col2">
+        <div class = " pe-4 text-end">
+            <h2>The operation</h2>
+            <p class = "pt-3">After each rug is finished on the loom, it’s washed and dried up to 5 times. Normally, this process is quite water-intensive. The Studio employs a water recapture system to ensure that as much water is collected, filtered, and reused as possible to minimize our environmental footprint.</p>
+        </div>
+     </div>
+     <div class = "col-lg-6 col-12">
+        <div class = "studio-img">
+            <img src = "assets/img/visit/sec5-img.jpg" width="100%">
+        </div>
+    </div>
+     </div>
+    </div>
+</section>
+<!----------------(studio-section5 End)------------------>
+<hr class = "section_hr">
+<!----------------(Studio-section6 Start)---------------->
+<section id = "studio-section6">
+    <div class = "container">
+     <div class = "text-center">
+        <h3>“We want visitors to browse unhurriedly, get inspired, and enjoy an espresso from our Milan-inspired bar.”</h3>
+        <img src = "assets/img/visit/signature.png"> 
+    </div>
+    </div>
+</section>
+<!----------------(Studio-section6 End)---------------->
+<hr class = "section_hr">
+<!----------------(Studio-section7 Start)---------------->
+<section id = "studio-slider">
+    <div class = "container">
+        <div class = "text-center">
+            <h2 class = "mb-4">
+                View the Gallery
+            </h2>
+        </div>
+      <ngx-slick-carousel class="carousel"
+      #slickModal="slick-carousel"
+      [config]="studioSlideConfig">
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider1.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content" >
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider2.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider3.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider4.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider5.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider6.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider7.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider8.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider9.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider10.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider11.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider12.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider13.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider14.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      <div ngxSlickItem  class="slide slider_content">
+        <div class = "box">
+          <img src = "assets/img/visit/slider/slider15.jpg" width="100%">
+          <div class = "overlay"></div>
+        </div>
+      </div>
+      </ngx-slick-carousel>
+    </div>
+  </section>
+  <hr class = "section_hr">
+  <!----------------(Studio-section7 end)---------------->
+   <!----------------(Studio-section8 Start)---------------->
+
+  <section id = "studio-section8">
+    <div class = "container">
+     <div class = "row">
+     <div class = "col-lg-6 col-12">
+        <div class = "studio-img">
+            <img src = "assets/img/visit/apartment.jpg" width="100%">
+        </div>
+    </div>
+    <div class = "col-lg-6 col-12 col2">
+        <div class = " ps-4 ">
+            <h2>Visit Us in NYC</h2>
+            <p class = "pt-3">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</p>
+           <button type = "button" class = "btn blue-btn">Explore the Apartment</button>
+        </div>
+     </div>
+     </div>
+    </div>
+</section>
+<!----------------(Studio-section8 Start)---------------->
+<hr class = "section_hr">
+
