--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -257,6 +257,7 @@
     </div>
   </div>
 </section>
+<hr class = "section_hr">
 <!-----------Section 8 Ends--------->
 <section id = "section-slider">
   <div class = "container">
