--- a/src/styles.scss
+++ b/src/styles.scss
@@ -211,7 +211,7 @@ section{
   text-align: left;
   width: 200px;
   transition: 0.5s;
-
+  
 }
 
 section .blue-btn{
@@ -2520,207 +2520,21 @@ border-bottom: 1px solid #e8e4dd;
 	}
 }
 
-
-/*********===========Visit Us(Studio) SCSS===========******/
-#studio-banner{
-	padding-top: 10rem;
-    padding-bottom: 10rem;
-    background: linear-gradient(-45deg, #38494dcc, #38494dcc), url(assets/img/visit/studio-banner1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-	background-position: center;
-	animation: change 20s infinite ease-in-out;
-	
-
-	@keyframes change {
-		0%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("assets/img/visit/studio-banner1.jpg");
-		}
-		25%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("assets/img/visit/studio-banner2.jpg");
-		}
-		50%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("assets/img/visit/studio-banner3.jpg");
-		}
-		75%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("assets/img/visit/studio-banner4.jpg");
-		}
-		100%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("assets/img/visit/studio-banner5.jpg");
-		}
-		
-	}
-
-	.container {
-		max-width: 700px !important;
-		width: 100%;
-	}
-	h1 {
-		color: #fff;
-	}
-	h6 {
-		color: #fff;
-	}
-	button {
-		padding: 0.8rem;
-		width: 280px !important;
-	}
-}
-
-
-/******Studio section1******/
-#studio-section1{
-	background: linear-gradient(180deg ,#e7e3dc 50% , #fff 0);
-
-	&:hover{
-		background: linear-gradient(180deg ,#fff 50% , #e7e3dc 0);
-		.container{
-			.box{
-				background: linear-gradient(180deg, #e7e3dc 50% , #fff 0 );
-			}
-		}
-		
-	}
-	
-	.container{
-		max-width: 700px !important;
-		width: 100%;
-
-		.box{
-			background: linear-gradient(180deg, #fff 50% , #e7e3dc 0 );
-            padding: 3rem;
-
-			h2{
-				&:after{
-					content: "";
-					position: relative;
-					display: block;
-					width: 40px;
-					height: 3px;
-					background: #627b80;
-					bottom: 0;
-					left: calc(48% - 20px);
-					text-align: center;
-					margin-top: 10px;
-				}
-			}
-		}
-	}
-}
-
-
-
-/******Studio section2******/
-#studio-section2{
-	h2{
-		text-transform: capitalize;
-		&:after{
-			        content: "";
-					position: relative;
-					display: block;
-					width: 40px;
-					height: 3px;
-					background: #627b80;
-					bottom: 0;
-					left: calc(100% - 45px);
-					margin-top: 10px;
-		}
-	}
-}
-
-/******Studio section2******/
-#studio-section3{
-	h2{
-		&:after{
-                    content: "";
-					position: relative;
-					display: block;
-					width: 40px;
-					height: 3px;
-					text-align: center;
-					background: #627b80;
-					bottom: 0;
-					left: calc(50% - 20px);
-					margin-top: 10px;
-		}
-	
-	}
-
-	
-}
-
-.card{
-	text-align: center;
-	position: relative;
-	color: #fff;
-	height: 300px;
-}
-.card:before{
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.5);
-	transition:all 0.3s ease 0s;
-	opacity: 0;
-}
-.card:hover:before{
-	opacity: 1;
-}
-.card img{
-	width: 100%;
-	height: 100%;
+.slick-arrow{
+	cursor: pointer;
+	position: absolute !important;
+	top:40%;
+	width: 50px;
 
 }
-.card .content{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	padding: 1rem 0;
-	background-color: #607d8b87;
-	transition:all 0.3s ease 0s;
+.left_arrow{
+	z-index: 1000;
+	left:25px;
 }
-.card:hover .content{
-	bottom: 20%;
-}
-.card .content .name{
-	font-size: 22px;
-	font-weight: 800;
-	letter-spacing: 1px;
-	display: block;
-	margin-bottom: 7px;
-	text-transform: uppercase;
-	transition:all 0.3s ease 0s;
-}
-.card:hover .content .name{
-	transform:translateY(30px);
-	transition-delay:0.3s;
-}
-.card .content .post{
-	font-size: 17px;
-	display: block;
-	transition:all 0.3s ease 0s;
-	text-transform: capitalize;
-}
-.card:hover .content .post{
-	transform:translateY(-30px);
-	transition-delay:0.3s;
- 
+.right_arrow{
+	right:25px;
 }
 
-.card .content h5{
-	color: #fff;
-}
-
-.card .content p{
-	color: #fff;
-}
-
-
- 
 /****=============(Responsive SCSS)============******/
 
 @media(max-width:991px) {
