--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -31,12 +31,11 @@
             <div class = "apartment-img">
                 <img src = "assets/img/visit/apartment1.jpg" width="100%"  alt = "img">
             </div>
- 
         </div>
        <div class = "col-lg-6 col-12 ">
           <div class = "col2">
               <h2>It’s in the details</h2>
-              <p class = "pt-3">King worked with us to incorporate our Moroccan roots into the design, including a centrally-placed handcrafted pendant light handmade in Marrakech, and shelves scattered with ceramics and objects sourced through local potters and artisans.</p>
+              <p>King worked with us to incorporate our Moroccan roots into the design, including a centrally-placed handcrafted pendant light handmade in Marrakech, and shelves scattered with ceramics and objects sourced through local potters and artisans.</p>
           </div>
        </div>
        
@@ -49,10 +48,10 @@
 <section id = "apartment-section3">
     <div class = "container">
      <div class = "row">
-       <div class = "col-lg-6 col-12 col2">
-        <div class = " pe-4 text-end">
+       <div class = "col-lg-6 col-12">
+        <div class = "col2">
             <h2>A Leafy Tree</h2>
-            <p class = "pt-3">A leafy tree placed in the apartment’s original, leaded glass bay windows echoes the ancient olive tree at the center of the Beni Morocco Studio. Vintage finds throughout the space reflect the team’s deep appreciation of global design and craftsmanship.</p>
+            <p>A leafy tree placed in the apartment’s original, leaded glass bay windows echoes the ancient olive tree at the center of the Beni Morocco Studio. Vintage finds throughout the space reflect the team’s deep appreciation of global design and craftsmanship.</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
@@ -80,10 +79,10 @@
 <section id = "apartment-section5">
     <div class = "container">
      <div class = "row">
-       <div class = "col-lg-6 col-12 col2">
-        <div class = "text-center">
+       <div class = "col-lg-6 col-12 ">
+        <div class = "col2">
             <h2>What to expect</h2>
-            <p class = "pt-3 mx-3">Seasonal rug installations, curated by the Beni creative team and styled by King, will highlight new designs and patterns, and our collaboration collections. Larger scale color samples in every in-stock shade will be stacked and ready to peruse. To-go sample packs will allow visitors to visualize our exclusive color palette and feel the quality of our handcrafted rugs.</p>
+            <p>Seasonal rug installations, curated by the Beni creative team and styled by King, will highlight new designs and patterns, and our collaboration collections. Larger scale color samples in every in-stock shade will be stacked and ready to peruse. To-go sample packs will allow visitors to visualize our exclusive color palette and feel the quality of our handcrafted rugs.</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
@@ -112,11 +111,11 @@
             <img src = "assets/img/visit/studio-banner1.jpg" width="100%">
         </div>
     </div>
-    <div class = "col-lg-6 col-12 col2">
-        <div class = " ps-4 ">
+    <div class = "col-lg-6 col-12">
+        <div class = "col2">
             <h2>Visit Us in Marrakech</h2>
-            <p class = "pt-3">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</p>
-           <button type = "button" class = "btn blue-btn">Explore the Studio</button>
+            <p class = "mb-0">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</p>
+           <button type = "button" class = "btn blue-btn" routerLink = "/visit/studio">Explore the Studio</button>
         </div>
      </div>
      </div>
