--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -152,7 +152,7 @@
 <section id = "studio-slider">
     <div class = "container">
         <div class = "text-center">
-            <h2 class = "mb-4">
+            <h2>
                 View the Gallery
             </h2>
         </div>
@@ -268,7 +268,7 @@
         <div class = "col2">
             <h2>Visit Us in NYC</h2>
             <p class = "pt-3">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</p>
-           <button type = "button" class = "btn blue-btn">Explore the Apartment</button>
+           <button type = "button" class = "btn blue-btn" routerLink = "/visit/apartment">Explore the Apartment</button>
         </div>
      </div>
      </div>
