--- a/src/app/page/visit-us/the-apartment/the-apartment.component.scss
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.scss
@@ -102,16 +102,24 @@ h2{
     background:linear-gradient(154deg, #e7e3dc 50%, #fff 0);
     .col2{
       padding-top: 10rem;
-    }
-	h2{
+
+      p{
+        padding-top: 1rem;
+      }
+
+      h2{
 		text-transform: capitalize;
 	}
+    }
+	
 
     .apartment-img{
         overflow: hidden;
         position: relative;
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
            
         }
     
@@ -164,22 +172,27 @@ h2{
 
 	.col2{
 		padding-top: 10rem;
+        p{
+            padding-top: 1rem;
+        }
+
+        h2{
+            text-transform: capitalize;
+            &:after{
+                left: calc(100% - 45px);
+            }	
+        }
+    
 	}
 			
-	h2{
-		text-transform: capitalize;
-        &:after{
-            left: calc(100% - 45px);
-        }
-       
-		
-	}
-
+	
 	.apartment-img{
         overflow: hidden;
         position: relative;
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
            
         }
     
@@ -267,6 +280,7 @@ h2{
 
 	.col2{
 		padding-top: 10rem;
+        text-align: center;
 	}
 			
 	h2{
@@ -274,16 +288,15 @@ h2{
         &:after{
             left: calc(48% - 20px);
             
-        }
-       
-		
+        }	
 	}
-
 	.apartment-img{
         overflow: hidden;
         position: relative;
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
            
         }
     
@@ -340,11 +353,14 @@ h2{
 	
 	.col2{
 		padding-top: 5rem;
+        p{
+            padding:1rem;
+        }
+        h2{
+            text-transform: capitalize;    
+        }
 	}
-	h2{
-		text-transform: capitalize;
-		
-	}
+	
 	.studio-img{
 		text-align: center;
 		overflow: hidden;
@@ -372,7 +388,7 @@ h2{
 
 		img{
 			width: 100%;
-			height: auto;
+			object-fit: cover;
 			height: 480px;
 		}
 		
@@ -388,9 +404,12 @@ h2{
 
 /**==========++++++(Responsive SCSS)++++++++++============*/
 @media(max-width:991px) {
-
+   p{
+       font-size: 16px;
+       line-height:24px;
+   }
     #apartment-section2{
-        .col1{
+        .col2{
             padding-top: 0rem;
             text-align: left;
     
@@ -406,10 +425,16 @@ h2{
     }
     
     #apartment-section3{
-    
-        .card{
-            margin-top: 1rem;
+        .col2{
+            padding-top: 0rem;
+
+            h2{
+                &:after{
+                    left: 0;
+                }
+            }
         }
+        
     }
     
     #apartment-section4{
@@ -421,10 +446,17 @@ h2{
             }
         }
     }
-        
+
+    #apartment-section5{
+        .col2{
+            padding-top: 0rem;
+            text-align: center;
+        }
     }
+        
+}
     
-      @media(max-width:768px) {
+@media(max-width:768px) {
     p{
         font-size: 16px;
         line-height: 24px;
@@ -441,24 +473,37 @@ h2{
              }
          }
     }
+
+    #apartment-section4 h6:before{
+        bottom: -15px;
+    }
+
+    #studio-section8 
+    .col2{
+        padding-top: 1rem;
+    }
+    button{
+        width: 250px;
+    }
         
+}
+    
+@media(max-width:576px) {
+    #apartment-banner{
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+    }
+    #apartment-section6{
+        height: 500px;
+    }
+}
+ @media(max-width:470px) {	
+    #apartment-banner{
+        padding-top: 4rem;
+        padding-bottom: 4rem;
     }
     
-      @media(max-width:576px) {
-        #apartment-banner{
-            padding-top: 6rem;
-            padding-bottom: 6rem;
-        }
-      }
-    
-      @media(max-width:470px) {	
-        #apartment-banner{
-            padding-top: 4rem;
-            padding-bottom: 4rem;
-        }
-    
-      }
-    
-      @media(max-width:360px) {
+}
+@media(max-width:360px) {
         
-      }
+}
