--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -97,14 +97,24 @@
           </div>
           <!-----Product Variation---->
                   <!-----Choose Size----->
+                  <div class="preview">
+                    
+                  </div>
           <div class ="choose_color mb-3">
+
             <h6>Choose Color</h6>
-             <input type = "button" *ngFor = "let color of colors" class = "w-8 h-8 btn" [style.background]="color" (click) = "selectedColor = color" [ngClass] = "{'selected':selectedColor === color}" >
+                   <input class = "btn active" name='color' type='button' value= "light grey"/>
+                    <input class = "btn"  name='color' type='button' value = "red" />
+                    <input class = "btn"  name='color' type='button' value = "blue"/>
+                    <input class = "btn"  name='color' type='button' value = "grey" /> 
           </div>
                  <!-----Choose Size----->
           <div class ="choose_size mb-3">
             <h6>Choose Size</h6>
-             <input type = "button" *ngFor = "let size of sizes" class = "" [style.background]="size" (click) = "selectedSize = size" [ngClass] = "{'selected':selectedSize === size}" [value] = "size">
+            <input class = "btn active" name='size' type='button' value= "4 X 5"/>
+                    <input class = "btn"  name='size' type='button' value = "3 X 5" />
+                    <input class = "btn"  name='size' type='button' value = "5 X 5"/>
+                    <input class = "btn"  name='size' type='button' value = "3 X 4" /> 
           </div>
           <!-- <div class="variation" *ngIf="productVariation != ''"> -->
             <div class="variation" *ngIf="productVariation != ''">
